--- a/psdtohtml_1.css
+++ b/psdtohtml_1.css
@@ -13,34 +13,51 @@ body{
 #logo{
 	
 	min-height: 100px;
+	padding-left: 0px;
 	
 }
+.headingone{
+	padding-left: 7px;
+}
 #middle{
-
-	padding-left: 60px;
-	padding: 22px;
+	padding-left: 10px;
+	color: #003f04;
 }
 #right{
-	padding-left: 20px;
+	padding-right: 10px;
 }
 .red{
 
 color: #56030d;
+font-size: 14px;
+margin-left: 60px;
+margin-top: 2px;
 }
 .green{
 color: #135907;
+font-size: 14px;
+margin-left: 60px;
+margin-bottom: 1px;
 }
 .search{
 	background-color: #872c2c;
 }
 #box{
 border: 1px solid #872c2c;
-background-color: #872c2c;}
+background-color: #872c2c;
+width: 300px;
+margin-left: 60px;
+}
+.contentright{
+	margin-right: 10px;
+	margin-left: 60px;
+}
 #go{
 	background-color: #872c2c;
 	color: white;
 }
 .table1{
+	font-size: 15px;
 	background-color: #872c2c;
 	color: white;
 	padding: 10px;
@@ -50,7 +67,7 @@ background-color: #872c2c;}
 	min-width: 1168px;
 	position: relative;
 	left: -34px;
-	top: -10px;
+	top: -5px;
 }
 th{ 
 	border-bottom-left-radius: 10px;
@@ -69,6 +86,7 @@ th{
 	width: 420px;
 	padding-right: 15px;
     border-right: 0px solid white;
+    font-size: 17px;
 }
 a{
 	color: white;
